# romaji-ime

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: macos.yml  release.yml  windows.yml
crates/ime-engine/: Cargo.toml
crates/ime-engine/examples/: ai_smoke.rs
crates/ime-engine/src/: ai.rs  key.rs  learning.rs  lib.rs  romaji.rs  session.rs
crates/ime-ffi/: Cargo.toml  cbindgen.toml
crates/ime-ffi/include/: romaji_ime.h
crates/ime-ffi/src/: lib.rs
crates/ime-ipc/: Cargo.toml
crates/ime-ipc/src/: lib.rs
crates/ime-server/: Cargo.toml
crates/ime-server/src/: dispatch.rs  main.rs  pipe_win.rs  transport.rs
dict/: Cargo.toml
dict/src/: main.rs
docs/: config.example.json  ipc-protocol.md
platform/macos/: INSTALL.md  README.md  RomajiIME.entitlements  build.sh  install.sh  package-zip.sh  package.sh
platform/macos/Resources/: Info.plist
platform/macos/Sources/RomajiIME/: Bridging-Header.h  CandidateWindow.swift  DebugLog.swift  EngineBridge.swift  InputController.swift  main.swift
platform/windows/: CMakeLists.txt  README.md
platform/windows/src/: Globals.cpp  Globals.h  RomajiIME.def  TextService.cpp  TextService.h  dllmain.cpp  ipc.cpp  ipc.h
xtask/: Cargo.toml
xtask/src/: main.rs
