[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Developer automation: C ABI header generation, dictionary build, macOS packaging."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
cbindgen = "0.29"
