[package]
name = "ime-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "OS-independent core engine for the romaji IME (romaji->kana, session, converters)."

[features]
default = ["cloud-http"]
# Real HTTP cloud-AI converter. Off -> only the trait + mock are available, which
# keeps the dependency footprint (and cross-compile) minimal for tests.
cloud-http = ["dep:ureq"]

[dependencies]
serde = { workspace = true }
serde_json = "1"
# native-tls picks the platform's TLS (Security.framework on macOS, SChannel on
# Windows) so it cross-compiles without ring/OpenSSL.
ureq = { version = "2", default-features = false, features = ["native-tls"], optional = true }

[dev-dependencies]
# (mock converter lives in unit tests)
