[package]
name = "ime-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Out-of-process engine host for the Windows TSF frontend (named-pipe server)."

[[bin]]
name = "ime-server"
path = "src/main.rs"

[dependencies]
ime-engine = { path = "../ime-engine" }
ime-ipc = { path = "../ime-ipc" }

# Named-pipe transport, Windows only.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_IO",        # OVERLAPPED, needed by ReadFile/WriteFile/ConnectNamedPipe
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }
